--- a/frontend/src/components/results/Results.scss
+++ b/frontend/src/components/results/Results.scss
@@ -17,11 +17,11 @@
 }
 
 .no-results {
-  background-color: #2EA300;
+  background-color: #2ea300;
 }
 
 .results-found {
-  background-color: #BB4430;
+  background-color: #bb4430;
 }
 
 .header {
