--- a/frontend/src/home/HomeView/HomeView.module.css
+++ b/frontend/src/home/HomeView/HomeView.module.css
@@ -1,25 +1,25 @@
 .root {
-    width: 50%;
-    margin: auto;
-    margin-bottom: 300px;
+  width: 50%;
+  margin: auto;
+  margin-bottom: 300px;
 }
 .root hr {
-    background-color: #3a0ca3;
+  background-color: #3a0ca3;
 }
 .main {
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 600;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 600;
 }
-.main h1{
-    font-size:20px
+.main h1 {
+  font-size: 20px;
 }
 .main span {
-    font-size: 20px;
-    color: #44ffd1;
+  font-size: 20px;
+  color: #44ffd1;
 }
 .scrollable {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 .scrollable div {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
