--- a/frontend/src/components/vault/VaultDeposit/VaultDeposit.module.css
+++ b/frontend/src/components/vault/VaultDeposit/VaultDeposit.module.css
@@ -38,6 +38,11 @@
   padding: 0.5rem;
 }
 
+.labelCheck {
+  margin-left: 10px;
+  font-size: 14px;
+}
+
 .note {
   font-size: 9px;
   font-weight: 400;
